@@ -296,19 +296,29 @@ verilog/inc1.v:545:  initial
 verilog/inc1.v:545: `line 545 "verilog/inc1.v" 0
 verilog/inc1.v:545:  $display("%s%s","a1","b2c3\n");
 verilog/inc1.v:546: endmodule
-verilog/inc1.v:550: predef 0 0
-verilog/inc1.v:551: predef 1 1
-verilog/inc1.v:552: predef 2 2
-verilog/inc1.v:553: predef 3 3
-verilog/inc1.v:554: predef 10 10
-verilog/inc1.v:555: predef 11 11
-verilog/inc1.v:556: predef 20 20
-verilog/inc1.v:557: predef 21 21
-verilog/inc1.v:558: predef 22 22
-verilog/inc1.v:559: predef 23 23
-verilog/inc1.v:560: predef -2 -2
-verilog/inc1.v:561: predef -1 -1
-verilog/inc1.v:562: predef 0 0
-verilog/inc1.v:563: predef 1 1
-verilog/inc1.v:564: predef 2 2
-verilog/inc1.v:566: `line 566 "verilog/inc1.v" 2
+verilog/inc1.v:553: $display("RAM0");
+verilog/inc1.v:554: $display("CPU");
+verilog/inc1.v:562: XXE_FAMILY = XXE_
+verilog/inc1.v:565:  $display("XXE_ is defined");
+verilog/inc1.v:569: XYE_FAMILY = XYE_
+verilog/inc1.v:572:  $display("XYE_ is defined");
+verilog/inc1.v:576: XXS_FAMILY = XXS_some
+verilog/inc1.v:579:  $display("XXS_some is defined");
+verilog/inc1.v:583: XYS_FAMILY = XYS_foo
+verilog/inc1.v:586:  $display("XYS_foo is defined");
+verilog/inc1.v:627: predef 0 0
+verilog/inc1.v:628: predef 1 1
+verilog/inc1.v:629: predef 2 2
+verilog/inc1.v:630: predef 3 3
+verilog/inc1.v:631: predef 10 10
+verilog/inc1.v:632: predef 11 11
+verilog/inc1.v:633: predef 20 20
+verilog/inc1.v:634: predef 21 21
+verilog/inc1.v:635: predef 22 22
+verilog/inc1.v:636: predef 23 23
+verilog/inc1.v:637: predef -2 -2
+verilog/inc1.v:638: predef -1 -1
+verilog/inc1.v:639: predef 0 0
+verilog/inc1.v:640: predef 1 1
+verilog/inc1.v:641: predef 2 2
+verilog/inc1.v:643: `line 643 "verilog/inc1.v" 2
